syntax = "proto3";

package management;

option go_package = "./management";

service Management {
    rpc CreateNewUser (NewUser) returns (User) {}
    rpc GetUsers (GetUsersParams) returns (UserList) {}
}

message NewUser{
    string name = 1;
    int32 age = 2;
}

message User {
    string name = 1;
    int32 age = 2;
    int32 id = 3;
}

message GetUsersParams{

}

message UserList{
    repeated User users = 1;
}